--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -7,7 +7,6 @@
     tools:context=".AddContactActivity"
     android:orientation="vertical">
 
-
     <EditText
         android:id="@+id/editText_name"
         android:layout_width="match_parent"
@@ -15,7 +14,7 @@
         android:ems="10"
         android:hint="@string/enter_name"
         android:imeOptions="actionNext"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName|textCapSentences" />
 
     <EditText
         android:id="@+id/editText_lastname"
@@ -24,7 +23,7 @@
         android:ems="10"
         android:hint="@string/enter_lastname"
         android:imeOptions="actionNext"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName|textCapSentences" />
 
     <EditText
         android:id="@+id/editText_address"
@@ -33,7 +32,7 @@
         android:ems="10"
         android:hint="@string/enter_address"
         android:imeOptions="actionNext"
-        android:inputType="textPostalAddress" />
+        android:inputType="textPostalAddress|textCapSentences" />
 
     <EditText
         android:id="@+id/editText_number"
@@ -42,7 +41,7 @@
         android:ems="10"
         android:hint="@string/enter_phone_number"
         android:imeOptions="actionDone"
-        android:inputType="number" />
+        android:inputType="phone" />
 
     <Button
         android:layout_gravity="center"
