--- a/app/src/main/res/layout/activity_detail_contact.xml
+++ b/app/src/main/res/layout/activity_detail_contact.xml
@@ -7,32 +7,27 @@
     tools:context=".DetailContactActivity"
     android:orientation="vertical">
 
-
     <TextView
         android:id="@+id/textView_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
         style="@style/previewTextStyle"/>
 
     <TextView
-        android:id="@+id/textView_lastname"
+        android:id="@+id/textView_last_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
         style="@style/previewTextStyle"/>
 
     <TextView
         android:id="@+id/textView_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
         style="@style/previewTextStyle"/>
 
     <TextView
         android:id="@+id/textView_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
         style="@style/previewTextStyle"/>
 </LinearLayout>
