--- a/app/src/main/res/layout/recycle_contact_list.xml
+++ b/app/src/main/res/layout/recycle_contact_list.xml
@@ -8,31 +8,17 @@
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="5dp"
+    app:cardElevation="@dimen/cardElevation"
     app:cardUseCompatPadding="true"
-    app:contentPadding="6dp">
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    app:contentPadding="@dimen/cardContentPadding">
 
         <TextView
             android:id="@+id/name_and_lastName"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text=""
-            android:textSize="@dimen/nameSize"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/TextViewMargins"
+            android:textSize="@dimen/nameSize" />
+
 </android.support.v7.widget.CardView>
 </FrameLayout>
