--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -7,6 +7,19 @@
     tools:context=".AddContactActivity"
     android:orientation="vertical">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme"
+            />
+    </android.support.design.widget.AppBarLayout>
+
     <EditText
         android:id="@+id/editText_name"
         android:layout_width="match_parent"
@@ -26,6 +39,15 @@
         android:inputType="textPersonName|textCapSentences" />
 
     <EditText
+        android:id="@+id/editText_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/enter_phone_number"
+        android:imeOptions="actionNext"
+        android:inputType="phone" />
+
+    <EditText
         android:id="@+id/editText_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,22 +55,21 @@
         android:hint="@string/enter_address"
         android:imeOptions="actionNext"
         android:inputType="textPostalAddress|textCapSentences" />
-
     <EditText
-        android:id="@+id/editText_number"
+        android:id="@+id/editText_eMail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/enter_phone_number"
+        android:hint="@string/enter_email_address"
         android:imeOptions="actionDone"
-        android:inputType="phone" />
+        android:inputType="textEmailAddress" />
 
     <Button
         android:layout_gravity="center"
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add"
-        android:onClick="onAddButtonClick"
+        android:text="@string/save"
+        android:onClick="onSaveButtonClick"
         />
 </LinearLayout>
