--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/colorWhite">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -19,6 +20,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="10dp"
         android:src="@android:drawable/ic_input_add"
-        android:onClick="onFabClick"/>
+        android:onClick="onFabClick"
+        android:tint="@color/colorWhite"/>
 
 </android.support.design.widget.CoordinatorLayout>
