--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FFA442</color>
+    <color name="colorPrimaryDark">#FD8607</color>
+    <color name="colorAccent">#FFA442</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorGreen">#4DD229</color>
 </resources>
