--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FFA442</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorGreen">#4DD229</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorLightGray">#FFCCCCCC</color>
 </resources>
