--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="nameSize">22sp</dimen>
+
+    <dimen name="nameSize">15sp</dimen>
     <dimen name="listPadding">8dp</dimen>
-    <dimen name="TextViewMargins">8dp</dimen>
-    <dimen name="cardElevation">5dp</dimen>
-    <dimen name="cardContentPadding">6dp</dimen>
+    <dimen name="cirle_image_width">50dp</dimen>
+    <dimen name="circle_image_height">50dp</dimen>
+    <dimen name="circle_margin_bottom">5dp</dimen>
+    <dimen name="circle_margin_right">16dp</dimen>
+    <dimen name="circle_margin_left">16dp</dimen>
+    <dimen name="circle_margin_top">5dp</dimen>
+    <dimen name="button_call_marginBottom">8dp</dimen>
+    <dimen name="button_call_marginRight">25dp</dimen>
+    <dimen name="button_call_marginTop">8dp</dimen>
+
 </resources>
