--- a/app/src/main/res/layout/recycle_contact_list_item.xml
+++ b/app/src/main/res/layout/recycle_contact_list_item.xml
@@ -10,8 +10,8 @@
         android:layout_width="@dimen/cirle_image_width"
         android:layout_height="@dimen/circle_image_height"
         android:layout_marginBottom="@dimen/circle_margin_bottom"
-        android:layout_marginEnd="@dimen/circle_margin_right"
-        android:layout_marginStart="@dimen/circle_margin_left"
+        android:layout_marginEnd="@dimen/circle_margin_end"
+        android:layout_marginStart="@dimen/circle_margin_start"
         android:layout_marginTop="@dimen/circle_margin_top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/name_and_lastName"
@@ -24,6 +24,8 @@
         android:layout_height="wrap_content"
         android:textSize="@dimen/nameSize"
         android:textColor="@color/colorBlack"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_call"
         app:layout_constraintStart_toEndOf="@+id/contactAvatar"
@@ -32,11 +34,9 @@
 
     <ImageButton
         android:id="@+id/button_call"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="@dimen/button_call_marginBottom"
-        android:layout_marginEnd="@dimen/button_call_marginRight"
-        android:layout_marginTop="@dimen/button_call_marginTop"
+        android:layout_width="@dimen/button_call_width"
+        android:layout_height="@dimen/button_call_height"
+        android:layout_marginEnd="@dimen/button_call_marginEnd"
         android:background="@color/colorWhite"
         android:contentDescription="@string/call"
         android:src="@drawable/image_call"
