--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -16,60 +16,102 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme"
-            />
+            app:popupTheme="@style/AppTheme">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/cancelButton"
+                    style="@style/ToolbarButtonStyle"
+                    android:text="@string/cancel"
+                    android:onClick="onCancelButtonClick"/>
+
+                <Button
+                    android:id="@+id/saveButton"
+                    style="@style/ToolbarButtonStyle"
+                    android:text="@string/save"
+                    android:onClick="onSaveButtonClick"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
-    <EditText
-        android:id="@+id/editText_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/enter_name"
-        android:imeOptions="actionNext"
-        android:inputType="textPersonName|textCapSentences" />
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/editText_lastname"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/enter_lastname"
-        android:imeOptions="actionNext"
-        android:inputType="textPersonName|textCapSentences" />
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/editText_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/enter_phone_number"
-        android:imeOptions="actionNext"
-        android:inputType="phone" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/contactAvatar"
+            android:layout_width="@dimen/account_image_width"
+            android:layout_height="@dimen/account_image_height"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/account_marginTop"
+            android:src="@drawable/account_icon" />
 
-    <EditText
-        android:id="@+id/editText_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/enter_address"
-        android:imeOptions="actionNext"
-        android:inputType="textPostalAddress|textCapSentences" />
-    <EditText
-        android:id="@+id/editText_eMail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/enter_email_address"
-        android:imeOptions="actionDone"
-        android:inputType="textEmailAddress" />
+        <EditText
+            android:id="@+id/editText_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/edit_text_marginEnd"
+            android:layout_marginStart="@dimen/edit_text_marginStart"
+            android:ems="10"
+            android:hint="@string/enter_name"
+            android:imeOptions="actionNext"
+            android:inputType="textPersonName|textCapSentences"/>
 
-    <Button
-        android:layout_gravity="center"
-        android:id="@+id/addButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:onClick="onSaveButtonClick"
-        />
+        <EditText
+            android:id="@+id/editText_lastname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/edit_text_marginEnd"
+            android:layout_marginStart="@dimen/edit_text_marginStart"
+            android:ems="10"
+            android:hint="@string/enter_lastname"
+            android:imeOptions="actionNext"
+            android:inputType="textPersonName|textCapSentences"/>
+
+        <EditText
+            android:id="@+id/editText_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/edit_text_marginEnd"
+            android:layout_marginStart="@dimen/edit_text_marginStart"
+            android:ems="10"
+            android:hint="@string/enter_phone_number"
+            android:imeOptions="actionNext"
+            android:inputType="phone"/>
+
+        <EditText
+            android:id="@+id/editText_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/edit_text_marginEnd"
+            android:layout_marginStart="@dimen/edit_text_marginStart"
+            android:ems="10"
+            android:hint="@string/enter_address"
+            android:imeOptions="actionNext"
+            android:inputType="textPostalAddress|textCapSentences" />
+
+        <EditText
+            android:id="@+id/editText_eMail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/edit_text_marginEnd"
+            android:layout_marginStart="@dimen/edit_text_marginStart"
+            android:ems="10"
+            android:hint="@string/enter_email_address"
+            android:imeOptions="actionDone"
+            android:inputType="textEmailAddress" />
+
+    </LinearLayout>
+</ScrollView>
+
 </LinearLayout>
