--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="10dp"
-        android:src="@android:drawable/ic_input_add"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onFabClick"
-        android:tint="@color/colorWhite"/>
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@color/colorWhite"
+        app:fabSize="normal" />
 
 </android.support.design.widget.CoordinatorLayout>
