--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <dimen name="nameSize">15sp</dimen>
     <dimen name="listPadding">8dp</dimen>
     <dimen name="cirle_image_width">50dp</dimen>
     <dimen name="circle_image_height">50dp</dimen>
     <dimen name="circle_margin_bottom">5dp</dimen>
-    <dimen name="circle_margin_right">16dp</dimen>
-    <dimen name="circle_margin_left">16dp</dimen>
+    <dimen name="circle_margin_end">16dp</dimen>
+    <dimen name="circle_margin_start">16dp</dimen>
     <dimen name="circle_margin_top">5dp</dimen>
     <dimen name="button_call_marginBottom">8dp</dimen>
-    <dimen name="button_call_marginRight">25dp</dimen>
+    <dimen name="button_call_marginEnd">25dp</dimen>
     <dimen name="button_call_marginTop">8dp</dimen>
+    <dimen name="edit_text_marginStart">16dp</dimen>
+    <dimen name="edit_text_marginEnd">16dp</dimen>
+    <dimen name="account_marginTop">16dp</dimen>
+    <dimen name="account_image_height">150dp</dimen>
+    <dimen name="account_image_width">150dp</dimen>
+    <dimen name="button_call_width">35dp</dimen>
+    <dimen name="button_call_height">35dp</dimen>
+    <dimen name="textSize">15sp</dimen>
+    <dimen name="call_button_marginEnd">30dp</dimen>
+    <dimen name="detail_activity_marginStart">20dp</dimen>
+    <dimen name="expanded_title_marginBottom">20dp</dimen>
+    <dimen name="expanded_title_marginStart">20dp</dimen>
+    <dimen name="expanded_image_height">200dp</dimen>
 
 </resources>
